--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!-- Chat -->
+    <color name="ChatText">#47505d</color>
+    <color name="ChatNicknameOther">#3a414d</color>
+    <color name="ChatNicknameMe">#00BCD4</color>
 </resources>
