--- a/app/src/main/res/layout/channels_activity.xml
+++ b/app/src/main/res/layout/channels_activity.xml
@@ -5,7 +5,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayoutSearchBar">
 
         <EditText
             android:id="@+id/search_channel_editText"
@@ -21,7 +21,7 @@
         android:id="@+id/container_channels_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/linearLayout">
+        android:layout_below="@+id/linearLayoutSearchBar">
 
 
     </FrameLayout>
