--- a/app/src/main/res/layout/activity_participant_list.xml
+++ b/app/src/main/res/layout/activity_participant_list.xml
@@ -5,20 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:fitsSystemWindows="true">-->
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_participant_list"
-            android:layout_width="match_parent"
-            android:theme="@style/Toolbar"
-            android:layout_height="?attr/actionBarSize">
+        <!--<android.support.v7.widget.Toolbar-->
+            <!--android:id="@+id/toolbar_participant_list"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:theme="@style/Toolbar"-->
+            <!--android:layout_height="?attr/actionBarSize">-->
 
-        </android.support.v7.widget.Toolbar>
+        <!--</android.support.v7.widget.Toolbar>-->
 
-    </android.support.design.widget.AppBarLayout>
+    <!--</android.support.design.widget.AppBarLayout>-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_participant_list"
