--- a/app/src/main/res/layout/channels_activity.xml
+++ b/app/src/main/res/layout/channels_activity.xml
@@ -1,28 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayoutSearchBar">
-
-        <EditText
-            android:id="@+id/search_channel_editText"
+        <FrameLayout
+            android:id="@+id/container_channels_list"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:drawableLeft="@android:drawable/ic_menu_search"
-            android:hint="@string/search_channel_text"
-            android:textSize="30sp" />
+            android:layout_height="match_parent">
+        </FrameLayout>
 
-    </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/container_channels_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/linearLayoutSearchBar">
-
-
-    </FrameLayout>
 </RelativeLayout>
