--- a/app/src/main/res/layout/fragment_channel_list.xml
+++ b/app/src/main/res/layout/fragment_channel_list.xml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayoutSearchBar">
+
+        <EditText
+            android:id="@+id/search_channel_editText"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:drawableLeft="@android:drawable/ic_menu_search"
+            android:hint="@string/search_channel_text"
+            android:textSize="30sp" />
+
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/recycler_channel_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical" >
+        android:scrollbars="vertical"
+        android:layout_below="@+id/linearLayoutSearchBar">
 
     </android.support.v7.widget.RecyclerView>
 
 
 
-</FrameLayout>
+</RelativeLayout>
