--- a/app/src/main/res/layout/fragment_channel_list.xml
+++ b/app/src/main/res/layout/fragment_channel_list.xml
@@ -7,7 +7,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayoutSearchBar">
+        android:id="@+id/linearLayoutSearchBar"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <EditText
             android:id="@+id/search_channel_editText"
@@ -17,17 +19,68 @@
             android:hint="@string/search_channel_text"
             android:textSize="30sp" />
 
+
+
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/recycler_channel_list"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"
+        android:id="@+id/recyclerViewContainer"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/linearLayoutSearchBar">
 
-    </android.support.v7.widget.RecyclerView>
+        <LinearLayout
+            android:id="@+id/linlaHeaderProgress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <ProgressBar
+                android:id="@+id/pbHeaderProgress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+            </ProgressBar>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/no_channel_find_container"
+            android:layout_marginTop="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linlaHeaderProgress"
+            android:layout_centerHorizontal="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/no_channel_find"
+            android:textSize="20sp" />
+
+         <android.support.v7.widget.AppCompatButton
+             android:id="@+id/btn_create_group"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_gravity="center"
+             android:layout_marginTop="15dp"
+             android:padding="12dp"
+             android:text="@string/create_channel"/>
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+             xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/recycler_channel_list"
+            android:layout_width="match_parent"
+            android:layout_height="811dp"
+            android:scrollbars="vertical"
+            android:layout_below="@+id/linlaHeaderProgress">
+        </android.support.v7.widget.RecyclerView>
+
+    </RelativeLayout>
 
 
 
