--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -48,26 +48,40 @@
                 android:id="@+id/edittext_add_event_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/add_event_location"
-                android:inputType="text"/>
+                android:hint="@string/add_event_location"/>
 
         </android.support.design.widget.TextInputLayout>
 
-        <TextView
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:textSize="18sp"
-            android:id="@+id/edittext_add_event_date"
-            android:hint="@string/add_event_date"/>
+            android:layout_marginTop="32dp">
 
-        <TextView
-            android:id="@+id/edittext_add_event_time"
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/edittext_add_event_date"
+                android:hint="@string/add_event_date"
+                android:focusable="false" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:hint="@string/add_event_time"
-            android:textSize="18sp" />
+            android:layout_marginTop="32dp">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/edittext_add_event_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/add_event_time"
+                android:focusable="false" />
+
+
+        </android.support.design.widget.TextInputLayout>
+
+
 
         <Button
             android:id="@+id/button_create_event"
