--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="primary">#E43F3F</color>
+    <!--dialog loading-->
+    <color name="primary">#3F51B5</color>
     <color name="white">#FFFFFF</color>
     <color name="iron">#CCCCCC</color>
 
