--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -25,6 +25,15 @@
         android:textSize="24sp" />
 
     <TextView
+        android:id="@+id/event_creator_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Creato da : nome"
+        android:textAlignment="center"
+        android:layout_marginTop="10dp"
+        android:textSize="20sp"/>
+
+    <TextView
         android:id="@+id/event_day_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
