--- a/app/src/main/res/menu/menu_chat_fav.xml
+++ b/app/src/main/res/menu/menu_chat_fav.xml
@@ -6,7 +6,7 @@
         android:id="@+id/favourite_star"
         android:orderInCategory="2"
         android:title="@string/add_favourite"
-        android:icon="@drawable/ic_star_empty"
+        android:icon="@drawable/ic_star_full"
         app:showAsAction="always" />
 
     <item
