--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -46,7 +46,7 @@
         android:id="@+id/event_location_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Luogo: università ingegneria"
+        android:text="università ingegneria"
         android:textAlignment="center"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="50dp"
