--- a/app/src/main/res/layout-land/fragment_event.xml
+++ b/app/src/main/res/layout-land/fragment_event.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
@@ -8,10 +9,10 @@
         android:id="@+id/event_name_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:fontFamily="casual"
         android:text="NomeEvento"
         android:textAlignment="center"
-        android:layout_marginTop="10dp"
         android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:textSize="30sp"
         android:textStyle="bold" />
@@ -38,56 +39,67 @@
         android:id="@+id/event_day_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="Il giorno: 1-1-2010 alle ore 10:00"
         android:textAlignment="center"
         android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:layout_marginTop="30dp"
         android:textSize="24sp" />
 
     <TextView
         android:id="@+id/event_location_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="20dp"
         android:text="università ingegneria"
         android:textAlignment="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="50dp"
         android:textColor="@color/common_google_signin_btn_text_light_default"
         android:textSize="24sp" />
 
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/btn_event_view_partecipants"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:orientation="horizontal"
         android:layout_marginTop="25dp"
-        android:padding="12dp"
-        android:background="@android:color/holo_blue_light"
-        android:fontFamily="casual"
-        android:text="@string/view_partecipants"
-        android:textSize="18sp" />
+        android:layout_gravity="center">
 
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/btn_event_partecipa_confirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="55dp"
-        android:padding="12dp"
-        android:background="@android:color/holo_green_light"
-        android:fontFamily="casual"
-        android:text="@string/partecipa_confirmation"
-        android:textSize="24sp" />
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_event_view_partecipants"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="10dp"
+            android:background="@android:color/holo_blue_light"
+            android:fontFamily="casual"
+            android:padding="12dp"
+            android:text="@string/view_partecipants"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:typeface="sans" />
 
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/btn_event_partecipa_delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="55dp"
-        android:background="@android:color/holo_red_light"
-        android:fontFamily="casual"
-        android:padding="12dp"
-        android:text="@string/partecipa_delete"
-        android:textSize="24sp" />
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_event_partecipa_confirm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@android:color/holo_green_light"
+            android:fontFamily="casual"
+            android:padding="12dp"
+            android:text="@string/partecipa_confirmation"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_event_partecipa_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:background="@android:color/holo_red_light"
+            android:fontFamily="casual"
+            android:padding="12dp"
+            android:text="@string/partecipa_delete"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 </LinearLayout>
