--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -24,7 +24,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_gravity="bottom"
-            android:contentDescription="Upload file" />
+            android:contentDescription="Carica File" />
 
         <EditText
             android:id="@+id/edittext_chat_message"
@@ -60,7 +60,8 @@
         android:layout_above="@id/layout_chat_chatbox"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:focusableInTouchMode="true">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_channel_chat"
