--- a/app/src/main/res/layout-land/fragment_event.xml
+++ b/app/src/main/res/layout-land/fragment_event.xml
@@ -1,105 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_marginStart="75dp"
+    android:layout_marginEnd="75dp"
+    android:stretchColumns="*">
 
-    <TextView
-        android:id="@+id/event_name_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:fontFamily="casual"
-        android:text="NomeEvento"
-        android:textAlignment="center"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+    <TableRow>
 
-    <TextView
-        android:id="@+id/event_group_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Evento del gruppo: gruppo"
-        android:textAlignment="center"
-        android:layout_marginTop="15dp"
-        android:textSize="24sp" />
+        <TextView
+            android:id="@+id/event_name_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="casual"
+            android:text="NomeEvento"
+            android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:layout_span="2"/>
+    </TableRow>
+    <TableRow>
+        <TextView
+            android:id="@+id/event_group_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Evento del gruppo: gruppo"
+            android:textAlignment="center"
+            android:layout_marginTop="15dp"
+            android:textSize="24sp"
+            android:layout_span="2"/>
+    </TableRow>
+    <TableRow>
+        <TextView
+            android:id="@+id/event_creator_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Creato da : nome"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            android:textSize="20sp"
+            android:layout_span="2"/>
+    </TableRow>
+    <TableRow>
+        <TextView
+            android:id="@+id/event_day_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="Il giorno: 1-1-2010 alle ore 10:00"
+            android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="24sp"
+            android:layout_span="2"/>
+        </TableRow>
+    <TableRow>
+        <TextView
+            android:id="@+id/event_location_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="20dp"
+            android:text="Via boh, Genova, Italia"
+            android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_light_default"
+            android:textSize="24sp"
+            android:layout_span="2"/>
+    </TableRow>
 
-    <TextView
-        android:id="@+id/event_creator_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Creato da : nome"
-        android:textAlignment="center"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"/>
 
-    <TextView
-        android:id="@+id/event_day_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Il giorno: 1-1-2010 alle ore 10:00"
-        android:textAlignment="center"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="24sp" />
-
-    <TextView
-        android:id="@+id/event_location_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="20dp"
-        android:text="università ingegneria"
-        android:textAlignment="center"
-        android:textColor="@color/common_google_signin_btn_text_light_default"
-        android:textSize="24sp" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="25dp"
-        android:layout_gravity="center">
+    <TableRow>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_event_view_partecipants"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="50dp"
             android:background="@android:color/holo_blue_light"
             android:fontFamily="casual"
-            android:padding="12dp"
+            android:padding="16dp"
             android:text="@string/view_partecipants"
-            android:textSize="18sp"
+            android:textSize="17sp"
             android:textStyle="bold"
-            android:typeface="sans" />
+            android:layout_span="1"/>
 
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_event_partecipa_confirm"
+            android:id="@+id/btn_event_view_maps"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@android:color/holo_green_light"
+            android:background="@android:color/holo_blue_light"
             android:fontFamily="casual"
-            android:padding="12dp"
-            android:text="@string/partecipa_confirmation"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:padding="16dp"
+            android:text="@string/view_maps"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            android:layout_span="1"/>
+
+    </TableRow>
+
+    <TableRow>
 
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_event_partecipa_delete"
+            android:id="@+id/btn_event_partecipa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:background="@android:color/holo_red_light"
+            android:layout_marginTop="20dp"
             android:fontFamily="casual"
             android:padding="12dp"
-            android:text="@string/partecipa_delete"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-</LinearLayout>
+            android:text="Cancella Partecipazione"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:layout_span="2" />
+
+    </TableRow>
+
+</TableLayout>
