--- a/app/src/main/res/layout/activity_participant_list.xml
+++ b/app/src/main/res/layout/activity_participant_list.xml
@@ -30,4 +30,13 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <TextView
+        android:id="@+id/no_Partecipant_Text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/no_partecipant_find"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:visibility="gone"/>
+
 </android.support.design.widget.CoordinatorLayout>
