--- a/app/src/main/res/layout/fragment_channel_list.xml
+++ b/app/src/main/res/layout/fragment_channel_list.xml
@@ -57,8 +57,11 @@
             android:layout_centerHorizontal="true">
 
         <TextView
+            android:id="@+id/text_view_no_channel_find"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:text="@string/no_channel_find"
             android:textSize="20sp" />
 
