--- a/app/src/main/res/layout-land/list_item_channel.xml
+++ b/app/src/main/res/layout-land/list_item_channel.xml
@@ -9,14 +9,14 @@
 
     <ImageView
         android:id="@+id/image_open_channel_list_decorator"
-        android:layout_width="5dp"
+        android:layout_width="8dp"
         android:layout_height="match_parent"
         android:background="@color/colorAccent" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="40dp"
         android:orientation="vertical">
 
         <TextView
