--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -31,4 +31,12 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <TextView
+        android:id="@+id/no_event_find"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/no_events"
+        android:textSize="30sp"
+        android:visibility="gone"/>
+
 </android.support.design.widget.CoordinatorLayout>
