--- a/app/src/main/res/layout-land/activity_create_event.xml
+++ b/app/src/main/res/layout-land/activity_create_event.xml
@@ -2,12 +2,12 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
     <LinearLayout
-        android:layout_width="987dp"
-        android:layout_height="422dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:orientation="vertical"
@@ -23,7 +23,8 @@
             android:text="@string/add_event_title"
             android:textAlignment="center"
             android:textAllCaps="false"
-            android:textSize="35sp"
+            android:textColor="@android:color/black"
+            android:textSize="38sp"
             android:textStyle="bold" />
 
         <android.support.design.widget.TextInputLayout
@@ -35,7 +36,8 @@
                 android:id="@+id/edittext_add_event_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/add_event_name" />
+                android:hint="@string/add_event_name"
+                android:textSize="24sp" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -49,8 +51,9 @@
                 android:id="@+id/edittext_add_event_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="false"
                 android:hint="@string/add_event_location"
-                android:focusable="false"/>
+                android:textSize="24sp" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -62,11 +65,12 @@
             android:layout_marginTop="10dp">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/edittext_add_event_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/edittext_add_event_date"
+                android:focusable="false"
                 android:hint="@string/add_event_date"
-                android:focusable="false" />
+                android:textSize="24sp" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -79,23 +83,24 @@
                 android:id="@+id/edittext_add_event_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="false"
                 android:hint="@string/add_event_time"
-                android:focusable="false" />
+                android:textSize="24sp" />
 
 
         </android.support.design.widget.TextInputLayout>
 
 
-
         <Button
             android:id="@+id/button_create_event"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="18sp"
-            android:layout_marginTop="25dp"
-            android:background="?attr/selectableItemBackground"
-            android:text="@string/create_event" />
+            android:layout_marginTop="60dp"
+            android:background="@android:color/holo_orange_light"
+            android:padding="20dp"
+            android:text="@string/create_event"
+            android:textSize="30sp"/>
 
 
     </LinearLayout>
