--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -13,11 +13,13 @@
         android:paddingRight="24dp"
         android:weightSum="1">
 
-        <ImageView android:src="@drawable/ic_general"
-            android:layout_width="280dp"
-            android:layout_height="280dp"
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="24dp"
-            android:layout_gravity="center_horizontal" />
+            android:src="@drawable/ic_general" />
 
         <!-- Email Label -->
         <android.support.design.widget.TextInputLayout
@@ -61,7 +63,7 @@
             android:background="@android:color/holo_orange_light"
             android:padding="20dp"
             android:text="@string/login_button"
-            android:textSize="30sp" />
+            android:textSize="30dp" />
 
         <TextView
             android:id="@+id/link_signup"
