--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
@@ -8,10 +11,11 @@
         android:id="@+id/hello_Username_Message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="casual"
         android:text="Hello username"
         android:textAlignment="center"
+        android:textAllCaps="false"
         android:textSize="36sp"
         android:textStyle="bold" />
 
@@ -19,19 +23,28 @@
         android:id="@+id/welcome_back_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:fontFamily="casual"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="cursive"
         android:text="@string/welcome_back_message"
         android:textAlignment="center"
-        android:textSize="24sp" />
+        android:textSize="30sp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="280dp"
+        android:layout_weight="0.48"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/ic_general" />
 
     <Button
         android:id="@+id/main_button_find_groups"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:padding="20dp"
         android:layout_weight="0.04"
-        android:background="@android:color/transparent"
+        android:background="#ED303C"
         android:text="@string/find_groups"
         android:textSize="24sp" />
 
@@ -40,8 +53,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.04"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/transparent"
+        android:padding="20dp"
+        android:background="#F5634A"
         android:text="@string/view_pref_groups"
         android:textSize="24sp" />
 
@@ -50,9 +63,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.04"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/transparent"
+        android:padding="20dp"
+        android:background="#FF9C5B"
         android:text="@string/view_event_partecipation"
         android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/main_button_view_personal_page"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.04"
+        android:background="#FAD089"
+        android:padding="20dp"
+        android:text="@string/personalPage"
+        android:textSize="24sp" />
+
 
 </LinearLayout>
