--- a/app/src/main/res/layout-land/list_item_channel.xml
+++ b/app/src/main/res/layout-land/list_item_channel.xml
@@ -16,23 +16,24 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
+        android:layout_marginStart="40dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/text_open_channel_list_name"
-            android:text="NomeChat"
-            android:textSize="16sp"
-            android:textColor="#000000"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="NomeChat"
+            android:textColor="#000000"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/text_open_channel_list_participant_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/channel_list_participant_count"
             android:textColor="#8e8e8e"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
