--- a/app/src/main/res/layout-land/list_item_event.xml
+++ b/app/src/main/res/layout-land/list_item_event.xml
@@ -18,7 +18,7 @@
     <LinearLayout
         android:layout_width="400dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
+        android:layout_marginStart="40dp"
         android:orientation="vertical"
         android:layout_weight="0.80">
 
@@ -43,7 +43,7 @@
     <LinearLayout
         android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
+        android:layout_marginStart="50dp"
         android:orientation="vertical"
         android:layout_weight="0.17">
 
