--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -18,11 +18,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="20sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="80dp"
             android:fontFamily="casual"
             android:text="@string/add_event_title"
             android:textAlignment="center"
-            android:textAllCaps="false"
             android:textSize="35sp"
             android:textStyle="bold" />
 
@@ -35,7 +35,8 @@
                 android:id="@+id/edittext_add_event_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/add_event_name" />
+                android:hint="@string/add_event_name"
+                android:textSize="24sp" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -49,8 +50,9 @@
                 android:id="@+id/edittext_add_event_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="false"
                 android:hint="@string/add_event_location"
-                android:focusable="false"/>
+                android:textSize="24sp" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -62,11 +64,12 @@
             android:layout_marginTop="32dp">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/edittext_add_event_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/edittext_add_event_date"
+                android:focusable="false"
                 android:hint="@string/add_event_date"
-                android:focusable="false" />
+                android:textSize="24sp" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -79,23 +82,24 @@
                 android:id="@+id/edittext_add_event_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="false"
                 android:hint="@string/add_event_time"
-                android:focusable="false" />
+                android:textSize="24sp" />
 
 
         </android.support.design.widget.TextInputLayout>
 
 
-
         <Button
             android:id="@+id/button_create_event"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="18sp"
             android:layout_marginTop="50dp"
-            android:background="?attr/selectableItemBackground"
-            android:text="@string/create_event" />
+            android:padding="20dp"
+            android:background="@android:color/holo_orange_light"
+            android:text="@string/create_event"
+            android:textSize="30sp" />
 
 
     </LinearLayout>
