--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_color"
+    android:orientation="vertical"
     android:weightSum="1">
 
     <TextView
@@ -12,6 +16,7 @@
         android:fontFamily="casual"
         android:text="Hello username"
         android:textAlignment="center"
+        android:textColor="?attr/editTextColor"
         android:textSize="36sp"
         android:textStyle="bold" />
 
@@ -20,18 +25,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:fontFamily="casual"
+        android:fontFamily="cursive"
         android:text="@string/welcome_back_message"
         android:textAlignment="center"
-        android:textSize="24sp" />
+        android:textColor="@color/place_autocomplete_prediction_primary_text"
+        android:textSize="30sp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="380dp"
+        android:layout_weight="0.48"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/ic_general" />
 
     <Button
         android:id="@+id/main_button_find_groups"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="50dp"
         android:layout_weight="0.04"
-        android:background="@android:color/transparent"
+        android:background="#ED303C"
+        android:padding="25dp"
         android:text="@string/find_groups"
         android:textSize="24sp" />
 
@@ -40,8 +55,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.04"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/transparent"
+        android:background="#F5634A"
+        android:padding="25dp"
         android:text="@string/view_pref_groups"
         android:textSize="24sp" />
 
@@ -50,8 +65,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.04"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/transparent"
+        android:background="#FF9C5B"
+        android:padding="25dp"
         android:text="@string/view_event_partecipation"
         android:textSize="24sp" />
 
@@ -60,8 +75,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.04"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/transparent"
+        android:background="#FAD089"
+        android:padding="25dp"
         android:text="@string/personalPage"
         android:textSize="24sp" />
 
