--- a/app/src/main/res/layout/list_item_argument.xml
+++ b/app/src/main/res/layout/list_item_argument.xml
@@ -8,7 +8,7 @@
         android:id="@+id/list_item_argument_name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:gravity="center_vertical"
         tools:text="Argument Name" />
 
