--- a/app/src/main/res/layout/list_item_channel.xml
+++ b/app/src/main/res/layout/list_item_channel.xml
@@ -9,30 +9,31 @@
 
     <ImageView
         android:id="@+id/image_open_channel_list_decorator"
-        android:layout_width="5dp"
+        android:layout_width="8dp"
         android:layout_height="match_parent"
         android:background="@color/colorAccent" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/text_open_channel_list_name"
-            android:text="NomeChat"
-            android:textSize="16sp"
-            android:textColor="#000000"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="NomeChat"
+            android:textColor="#000000"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/text_open_channel_list_participant_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/channel_list_participant_count"
             android:textColor="#8e8e8e"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
