--- a/app/src/main/res/layout/list_item_chat_message_admin.xml
+++ b/app/src/main/res/layout/list_item_chat_message_admin.xml
@@ -4,8 +4,8 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
-    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-    android:layout_marginRight="@dimen/activity_horizontal_margin" >
+    android:layout_marginStart="@dimen/activity_horizontal_margin"
+    android:layout_marginEnd="@dimen/activity_horizontal_margin" >
 
     <TextView
         android:id="@+id/text_chat_date"
