--- a/app/src/main/res/layout/list_item_chat_message_user.xml
+++ b/app/src/main/res/layout/list_item_chat_message_user.xml
@@ -12,16 +12,16 @@
 
     <TextView
         android:id="@+id/text_chat_date"
-        android:text="February 22nd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textColor="#000000"
-        android:layout_marginTop="24dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginTop="24dp"
         android:gravity="center"
-        android:textSize="14sp" />
+        android:text="February 22nd"
+        android:textColor="#000000"
+        android:textSize="18sp" />
 
     <ImageView
         android:id="@+id/image_chat_profile"
@@ -30,40 +30,40 @@
         android:layout_height="36dp"
         android:layout_below="@id/text_chat_date"
         android:layout_marginTop="4dp"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/text_chat_nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Terry"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:textColor="@color/ChatNicknameOther"
-        android:layout_toRightOf="@id/image_chat_profile"
         android:layout_below="@id/text_chat_date"
-        android:layout_marginLeft="16dp"/>
+        android:layout_marginStart="16dp"
+        android:layout_toRightOf="@id/image_chat_profile"
+        android:text="Terry"
+        android:textColor="@color/ChatNicknameOther"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/text_chat_message"
-        android:text="message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="@color/ChatText"
+        android:layout_alignLeft="@id/text_chat_nickname"
         android:layout_below="@id/text_chat_nickname"
-        android:layout_alignLeft="@id/text_chat_nickname" />
+        android:text="message"
+        android:textColor="@color/ChatText"
+        android:textSize="19sp" />
 
 
     <TextView
-        android:text="11:36"
         android:id="@+id/text_chat_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/text_chat_nickname"
-        android:layout_marginLeft="8dp"
         android:layout_alignBaseline="@id/text_chat_nickname"
-        android:textSize="10sp"
-        android:textColor="#bebed1"/>
+        android:layout_marginStart="8dp"
+        android:layout_toRightOf="@id/text_chat_nickname"
+        android:text="11:36"
+        android:textColor="@color/common_google_signin_btn_text_light_focused"
+        android:textSize="13sp" />
 
 </RelativeLayout>
