--- a/app/src/main/res/layout/list_item_exam.xml
+++ b/app/src/main/res/layout/list_item_exam.xml
@@ -17,7 +17,7 @@ android:layout_marginTop="8dp">
     android:id="@+id/list_item_exam_name"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
+    android:layout_marginStart="10dp"
     android:gravity="center_vertical"
     tools:text="Exam" />
 
@@ -26,7 +26,7 @@ android:layout_marginTop="8dp">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|end"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         app:srcCompat="@drawable/ic_arrow_down" />
 
 </FrameLayout>
