--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -9,19 +9,20 @@
 
     <ImageView
         android:id="@+id/image_user_list_profile"
-        android:src="@drawable/login_logo"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginRight="16dp"
+        android:src="@drawable/ic_general"
+        android:layout_width="46dp"
+        android:layout_height="46dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginEnd="16dp"
         android:layout_centerVertical="true"/>
 
     <TextView
         android:id="@+id/text_user_list_nickname"
-        android:text="Jeremy Chen"
-        android:layout_toRightOf="@id/image_user_list_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/image_user_list_profile"
+        android:text="Jeremy Chen"
+        android:textSize="22sp" />
 
 </RelativeLayout>
