--- a/app/src/main/res/layout/list_item_exam.xml
+++ b/app/src/main/res/layout/list_item_exam.xml
@@ -1,25 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
-android:layout_width="match_parent"
-android:layout_height="50dp"
-android:layout_marginBottom="8dp"
-android:layout_marginTop="8dp">
-
-<ImageView
-    android:id="@+id/list_item_exam_icon"
-    android:layout_width="5dp"
-    android:layout_height="match_parent"
-    android:background="@color/colorAccent" />
-
-<TextView
-    android:id="@+id/list_item_exam_name"
+    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="10dp"
-    android:gravity="center_vertical"
-    tools:text="Exam" />
+    android:layout_height="50dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginTop="8dp">
+
 
     <ImageView
         android:id="@+id/list_item_exam_arrow"
@@ -28,5 +15,16 @@ android:layout_marginTop="8dp">
         android:layout_gravity="center_vertical|end"
         android:layout_marginEnd="10dp"
         app:srcCompat="@drawable/ic_arrow_down" />
+
+    <TextView
+        android:id="@+id/list_item_exam_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="10dp"
+        android:fontFamily="serif"
+        android:text="Fisica Matematica"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
 </FrameLayout>
