--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -101,6 +101,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:gravity="center"
+            android:textColor="#0645AD"
             android:text="@string/already_member_message"
             android:textSize="20sp" />
 
