--- a/app/src/main/res/layout/fragment_channel_list.xml
+++ b/app/src/main/res/layout/fragment_channel_list.xml
@@ -16,7 +16,9 @@
             android:id="@+id/search_channel_editText"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:drawableLeft="@android:drawable/ic_menu_search"
+            android:drawableStart="@android:drawable/ic_menu_search"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:hint="@string/search_channel_text"
             android:textSize="30sp" />
 
@@ -56,23 +58,25 @@
             android:layout_below="@+id/linlaHeaderProgress"
             android:layout_centerHorizontal="true">
 
-        <TextView
-            android:id="@+id/text_view_no_channel_find"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:text="@string/no_channel_find"
-            android:textSize="20sp" />
+            <TextView
+                android:id="@+id/text_view_no_channel_find"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
+                android:text="@string/no_channel_find"
+                android:textSize="22sp" />
 
-         <android.support.v7.widget.AppCompatButton
-             android:id="@+id/btn_create_group"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_gravity="center"
-             android:layout_marginTop="15dp"
-             android:padding="12dp"
-             android:text="@string/create_channel"/>
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btn_create_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:background="@android:color/holo_orange_light"
+                android:padding="12dp"
+                android:text="@string/create_channel"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
