--- a/app/src/main/res/layout/list_item_chat_message_event_created.xml
+++ b/app/src/main/res/layout/list_item_chat_message_event_created.xml
@@ -82,6 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:padding="8dp"
             android:gravity="center_vertical"
             android:orientation="vertical">
 
