--- a/app/src/main/res/layout/list_item_exam.xml
+++ b/app/src/main/res/layout/list_item_exam.xml
@@ -3,10 +3,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:layout_marginBottom="8dp"
-    android:layout_marginTop="8dp">
-
+    android:id="@+id/container_list_item_exam_name"
+    android:layout_height="70dp"
+    android:background="@color/colorPrimary">
 
     <ImageView
         android:id="@+id/list_item_exam_arrow"
@@ -24,7 +23,17 @@
         android:layout_marginStart="10dp"
         android:fontFamily="serif"
         android:text="Fisica Matematica"
+        android:textAllCaps="false"
+        android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/black"/>
+
+
+
 
 </FrameLayout>
