--- a/app/src/main/res/layout/fragment_personal_page.xml
+++ b/app/src/main/res/layout/fragment_personal_page.xml
@@ -92,7 +92,8 @@
             android:text="@string/add_exam"
             android:textSize="24sp"
             android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@+id/no_exams_find_container" />
+            android:layout_toEndOf="@+id/no_exams_find_container"
+            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
 
