--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -94,5 +94,22 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/linlaHeaderProgressMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:layout_above="@id/layout_chat_chatbox"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/pbHeaderProgressMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+        </ProgressBar>
+
+    </LinearLayout>
+
 </RelativeLayout>
 
