--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -36,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/no_events"
+        android:layout_marginStart="10dp"
         android:textSize="30sp"
         android:visibility="gone"/>
 
