--- a/app/src/main/res/layout-large-land/activity_main.xml
+++ b/app/src/main/res/layout-large-land/activity_main.xml
@@ -37,14 +37,13 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="380dp"
+        android:layout_height="200dp"
         android:layout_weight="0.48"
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/ic_general"
-        android:layout_marginTop="51dp"
+        android:layout_marginTop="11dp"
         android:layout_below="@+id/welcome_back_message"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="10dp" />
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/main_button_find_groups"
