--- a/app/src/main/res/menu/menu_general.xml
+++ b/app/src/main/res/menu/menu_general.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <item
+        android:id="@+id/user_setting"
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:title="Opzioni"
+        android:orderInCategory="7"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_home"
         android:title="Home"
@@ -11,5 +19,10 @@
         android:title="@string/disconnect"
         android:orderInCategory="10"
         />
+
+    <item
+        android:id="@+id/menu_general_about"
+        android:title="About"
+        android:orderInCategory="11"/>
 
 </menu>
